# ocr_llg_rag_responsible_AI_Governance

./: .dockerignore  .env.example  COMMERCIAL_ROADMAP.md  DEPLOYMENT_NEXT_STEPS.md  Dockerfile  README.md  pyproject.toml  render.yaml
frontend/: .dockerignore  .env.example  Dockerfile.render  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChatInterface.tsx  InvoiceDashboard.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: init_database.py
src/adamani_ai_rag/api/: app.py  dependencies.py
src/adamani_ai_rag/api/routes/: __init__.py  chat.py  documents.py  invoices.py
src/adamani_ai_rag/auth/: manager.py
src/adamani_ai_rag/config/: settings.py
src/adamani_ai_rag/core/: vectorstore.py
src/adamani_ai_rag/services/: document_service.py  invoice_extractor.py
